vlib/v/parser/tests/anon_sum_type_multi_return_err.vv
fn abc() (string, int) | string {
	return ''
}
